fix: remove extra white space and scroll by hiding overflow

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
 
 body, html {
     height: 100%;
+    overflow: hidden;
 }
 
 .main_conteiner {
